--- a/ui/package.json
+++ b/ui/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-vue": "7.0.0",
     "prettier": "2.2.1",
     "sass": "1.43.3",
-    "sass-loader": "10.1.1"
+    "sass-loader": "10.1.1",
+    "terser-webpack-plugin": "^1.4.5"
   }
 }
