--- a/ui/.env.example
+++ b/ui/.env.example
@@ -1,4 +1,4 @@
 VUE_APP_BASE_URL=
-VUE_APP_API_BASE_URL=
+VUE_APP_API_BASE_URL="http://localhost:8200/api/v1/"
 VUE_APP_API_KEY=""
 VUE_APP_IS_DEMO=1
